# forwarder

./: Cargo.toml  Dockerfile  Makefile  README.md  RESOURCES.md  package-lock.json  package.json  wrangler.toml
.github/workflows/: deploy-rust-cloudflare.yml  deploy.yml  docker.yml
docs/: RESOURCES.md  how-to-change-rss-feed.md
edge-worker/: Cargo.toml  Makefile  README.md  wrangler.toml
edge-worker/src/: forward.rs  lib.rs  rss.rs  user_agent.rs
forwarder/: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  wrangler-redcircle.toml  wrangler.toml
forwarder/fixtures/: doppelgaenger_20220205.rss  engineering_kiosk_20220205.rss
forwarder/src/: client.rs  event.rs  helpers.rs  lib.rs  posthog.rs  rss.rs  user_agent.rs
src/: client.rs  event.rs  forward.rs  helpers.rs  lib.rs  openpodcast.rs  posthog.rs
