[package]
name = "forwarder"
version = "0.2.0"
authors = ["Matthias <matthias-endler@gmx.net>"]
edition = "2021"
description = "Forwarder for MP3 files in podcast feeds"
license = "Apache-2.0/MIT"
repository = "https://github.com/openpodcast/forwarder"
keywords = [
    "podcast",
    "forwarder",
    "rss",
    "feed"
]
categories = ["multimedia::audio"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
cfg-if = "1.0.0"
worker = "0.0.10"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
regex = "1.6.0"
url = "2.2.2"
once_cell = "1.13.1"
urlencoding = "2.1.0"
html-escape = "0.2.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = {version = "0.11.12", features = ["json"] }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[dev-dependencies]
pretty_assertions = "1.2.1"
