[package]
name = "worker"
version = "0.1.0"
authors = ["Matthias <matthias-endler@gmx.net>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
cfg-if = "0.1.2"
worker = "0.0.8"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }
regex = "1.5.4"
url = "2.2.2"
once_cell = "1.9.0"
urlencoding = "2.1.0"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
